<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:beach_manager="http://schemas.android.com/apk/res-auto" >

	<item android:id="@+id/menu_select_all"
		android:title="@string/select_all"
		android:icon="@android:drawable/ic_dialog_dialer" />

	<item android:id="@+id/menu_deselect_all"
		android:title="@string/deselect_all"
		android:icon="@android:drawable/ic_dialog_dialer" />

	<item android:id="@+id/menu_cabin_deckchair_management"
		android:title="@string/menu_cabin_deckchair_management"
		android:icon="@android:drawable/ic_menu_manage" />

	<item android:id="@+id/menu_logs"
		android:title="@string/menu_logs"
		android:icon="@android:drawable/ic_menu_agenda" />

	<item android:id="@+id/menu_settings"
		android:title="@string/menu_settings"
		android:icon="@android:drawable/ic_menu_preferences" />

	<item android:id="@+id/menu_help"
		android:title="@string/menu_help"
		android:icon="@android:drawable/ic_menu_help" />

</menu>